--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                   <hr class="light">
                    <i class="fas fa-home" style="font-size:20px;"></i> 
           <hr class="light">
-          <p>829-536-5821</p>
+          <p class="phone">829-536-5821</p>
           <p>sylvaindishley98@gmail.com</p>
           <p>Santo Domingo, RD.</p>
                 </div>
